--- a/TeduShop.Model/TeduShop.Model.csproj
+++ b/TeduShop.Model/TeduShop.Model.csproj
@@ -5,11 +5,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9977935B-6339-4DC2-B79E-0186960FFC2F}</ProjectGuid>
+    <ProjectGuid>{42873770-823C-4853-AB00-9F4ED627AF98}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TeduShop.Data</RootNamespace>
-    <AssemblyName>TeduShop.Data</AssemblyName>
+    <RootNamespace>TeduShop.Model</RootNamespace>
+    <AssemblyName>TeduShop.Model</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -51,6 +51,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Absttract\Auditable.cs" />
+    <Compile Include="Absttract\IAuditable.cs" />
+    <Compile Include="Absttract\ISeoable.cs" />
+    <Compile Include="Absttract\ISwitchable.cs" />
+    <Compile Include="Absttract\Seoable.cs" />
+    <Compile Include="Absttract\Switchabel.cs" />
+    <Compile Include="Class1.cs" />
+    <Compile Include="Models\Footer.cs" />
+    <Compile Include="Models\Menu.cs" />
+    <Compile Include="Models\MenuGroup.cs" />
+    <Compile Include="Models\Order.cs" />
+    <Compile Include="Models\OrderDetail.cs" />
+    <Compile Include="Models\Page.cs" />
+    <Compile Include="Models\Post.cs" />
+    <Compile Include="Models\PostCategory.cs" />
+    <Compile Include="Models\PostTag.cs" />
+    <Compile Include="Models\Product.cs" />
+    <Compile Include="Models\ProductCategory.cs" />
+    <Compile Include="Models\Slide.cs" />
+    <Compile Include="Models\SupportOnline.cs" />
+    <Compile Include="Models\SystermConfig.cs" />
+    <Compile Include="Models\Tag.cs" />
+    <Compile Include="Models\VisistorStatic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -62,11 +85,8 @@
       <Project>{0148b5de-9ad3-4e16-8828-2c4bb95ecc1a}</Project>
       <Name>TeduShop.Common</Name>
     </ProjectReference>
-    <ProjectReference Include="..\TeduShop.Model\TeduShop.Model.csproj">
-      <Project>{42873770-823c-4853-ab00-9f4ed627af98}</Project>
-      <Name>TeduShop.Model</Name>
-    </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
