--- a/TeduShop.Web/TeduShop.Web.csproj
+++ b/TeduShop.Web/TeduShop.Web.csproj
@@ -206,6 +206,14 @@
       <Project>{9977935b-6339-4dc2-b79e-0186960ffc2f}</Project>
       <Name>TeduShop.Data</Name>
     </ProjectReference>
+    <ProjectReference Include="..\TeduShop.Model\TeduShop.Model.csproj">
+      <Project>{42873770-823c-4853-ab00-9f4ed627af98}</Project>
+      <Name>TeduShop.Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TeduShop.Service\TeduShop.Service.csproj">
+      <Project>{fcd17163-4409-4984-af73-e49398b3b0be}</Project>
+      <Name>TeduShop.Service</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
