--- a/TeduShop.Data/App.config
+++ b/TeduShop.Data/App.config
@@ -2,7 +2,7 @@
 <configuration>
 	<connectionStrings>
 		<clear/>
-		<add name ="TeduShopconnection" connectionString="Data Source=.;Initial Catalog = TeduShop;Integrated Security=False;User Id=sa;Password=123;MultipleActiveREsultSets=True"/>
+		<add name ="TeduShopconnection" connectionString="Data Source=DESKTOP-SANG\DUNG;Initial Catalog = TeduShop;Integrated Security=False;User Id=sa;Password=123;MultipleActiveREsultSets=True"/>
 	</connectionStrings>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
