--- a/TeduShop.Data/TeduShop.Data.csproj
+++ b/TeduShop.Data/TeduShop.Data.csproj
@@ -62,6 +62,10 @@
     <Compile Include="Migrations\202205280538276_InitiationDB.designer.cs">
       <DependentUpon>202205280538276_InitiationDB.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202205280841594_InitiationDB1.cs" />
+    <Compile Include="Migrations\202205280841594_InitiationDB1.designer.cs">
+      <DependentUpon>202205280841594_InitiationDB1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\FooterRepository.cs" />
@@ -98,6 +102,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202205280538276_InitiationDB.resx">
       <DependentUpon>202205280538276_InitiationDB.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202205280841594_InitiationDB1.resx">
+      <DependentUpon>202205280841594_InitiationDB1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
